<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="base_card_swipe">刷卡开门</string>
    <string name="base_qr_scan">二维码开门</string>
    <string name="base_finger">指纹开门</string>
    <string name="base_face">人脸开门</string>
    <string name="base_admin_name">帐号</string>
    <string name="base_admin_psw">密码</string>
    <string name="base_admin_login">登录</string>
    <string name="base_account_psw_login">帐号/密码</string>
    <string name="base_account_card_login">刷卡登录</string>
    <string name="base_admin_admin_login">管理员登录</string>
    <string name="base_bind_card_login">绑卡登录</string>
    <string name="base_put_cabinet">上柜</string>
    <string name="base_device_setting">设备管理</string>
    <string name="base_basic_setting">基础配置</string>
    <string name="base_device_equipment_info">设备信息</string>
    <string name="base_device_equipment_features">设备功能</string>
    <string name="base_device_equipment_heartbeat">定时心跳</string>
    <string name="base_device_equipment_voice_broadcast">语音播报</string>
    <string name="base_device_equipment_self_check">设备自检</string>
    <string name="base_device_equipment_rfid">RFID配置</string>
    <string name="base_check_max_time">盘存时长</string>
    <string name="base_app_update">检查更新</string>
    <string name="base_device_equipment_add">增加</string>
    <string name="base_device_equipment_save">保存</string>
    <string name="base_basic_setting_server_info">设备后台服务</string>
    <string name="base_basic_setting_device_info">设备基础信息</string>
    <string name="base_basic_setting_server_ip">后台IP</string>
    <string name="base_basic_setting_server_port">后台端口</string>
    <string name="base_basic_setting_device_no">设备编号</string>
    <string name="base_basic_setting_socket_key">通讯密钥</string>
    <string name="base_device_login">设备登录</string>
    <string name="base_basic_setting_input_hint">请输入</string>
    <string name="base_back_to_home">返回首页</string>
    <string name="base_qr_scan_tip">请出示小程序二维码\n在扫码处扫描</string>
    <string name="base_read_card_tip">请将卡放在\n读卡器处读取…</string>
    <string name="base_finger_tip">正在打开指纹\n请稍等…</string>
    <string name="base_linen_info_count">当前柜内数量</string>
    <string name="base_put_linen">布草上架</string>
    <string name="base_scan_linen_loading_tip">正在扫描统计中</string>
    <string name="base_scan_linen_loading_time_tip">请在规定时间内扫描布草(%s)</string>
    <string name="base_scan_linen_count_tip">扫描到的布草数量(%d件)</string>
    <string name="base_door_opened_tip">柜门已打开\n(%s)</string>
    <string name="base_com_modify_tip">串口已修改，重启应用生效</string>
    <string name="base_config_modify_tip">配置已修改，重启应用生效</string>
    <string name="base_com_restart_tip">重启</string>
    <string name="base_sure">确定</string>
    <string name="base_cancel">取消</string>
    <string name="base_bind_new_card">绑定新卡</string>
    <string name="base_loading_tip">请稍后…</string>

    <string name="base_heart_beat">%d分钟</string>
    <string name="base_com_tty1">/dev/ttyS1</string>
    <string name="base_com_tty2">/dev/ttyS2</string>
    <string name="base_com_tty3">/dev/ttyS3</string>
    <string name="base_com_tty4">/dev/ttyS4</string>
    <string name="base_com_tty5">/dev/ttyS5</string>
    <string name="base_com_tty6">/dev/ttyS6</string>
    <string name="base_com_tty7">/dev/ttyS7</string>
    <string name="base_com_tty8">/dev/ttyS8</string>
    <string name="base_com_ttymxc3">/dev/ttymxc3</string>

</resources>