<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.texeasy.view.fragment.putlinen.PutLinenViewModel" />

        <variable
            name="adapter"
            type="BindingRecyclerViewAdapter" />

        <import type="com.example.common.base.BindingRecyclerViewAdapter" />

        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />

        <import type="com.example.common.binding.viewadapter.recyclerview.LineManagers" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@mipmap/base_ic_loading"
            android:visibility="@{viewModel.isOpened?View.GONE:View.VISIBLE}"
            app:isStartRoundAnim="@{viewModel.isStartRoundAnim||viewModel.isOpened}"
            app:layout_constraintBottom_toTopOf="@id/tv_tip"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.15"
            app:roundAnimDuration="@{3000}"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:text="@{@string/base_scan_linen_loading_time_tip(viewModel.time)}"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/base_title_main"
            android:visibility="@{viewModel.isOpened?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/tv_count"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_loading"
            tools:text="@string/base_scan_linen_loading_time_tip" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@{@string/base_scan_linen_count_tip(viewModel.ecpCount)}"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/base_title_main"
            android:visibility="@{viewModel.isOpened?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/btn_confirm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tip"
            tools:text="@string/base_scan_linen_count_tip" />

        <TextView
            android:id="@+id/tv_open_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:text="@{@string/base_door_opened_tip(viewModel.doorTime)}"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/base_title_main"
            android:visibility="@{viewModel.isOpened?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/btn_close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_loading"
            tools:text="@string/base_door_opened_tip"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/base_login_button_selector"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/base_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:visibility="@{!viewModel.isHasScanEpc||viewModel.isOpened?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_confirm"
            app:onClickCommand="@{viewModel.onCancelCommand}"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@drawable/base_login_button_selector"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/base_sure"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:visibility="@{!viewModel.isHasScanEpc||viewModel.isOpened?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintLeft_toRightOf="@id/btn_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"
            app:onClickCommand="@{viewModel.onConfirmCommand}"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dp_33"
            android:layout_marginRight="@dimen/dp_33"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/base_login_button_selector"
            android:gravity="center"
            android:text="@string/base_sure"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:visibility="@{viewModel.isOpened?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:onClickCommand="@{viewModel.onCloseCommand}"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>