<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="ViewModel"
            type="com.texeasy.view.dialog.ScanLoadingDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/base_title_main"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_loading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/iv_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@mipmap/base_ic_loading"
            app:layout_constraintBottom_toTopOf="@id/tv_tip"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_door"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.15"
            bind:isStartRoundAnim="@{ViewModel.isStartRoundAnim}"
            bind:roundAnimDuration="@{3000}" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/base_scan_linen_loading_tip"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/base_title_main"
            app:layout_constraintBottom_toTopOf="@id/btn_stop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_loading" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/base_login_button_selector"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/base_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_stop"
            bind:layout_constraintBottom_toBottomOf="parent"
            bind:onClickCommand="@{ViewModel.onCancelCommand}" />

        <TextView
            android:id="@+id/btn_stop"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/base_login_button_selector"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/base_sure"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toRightOf="@id/btn_cancel"
            app:layout_constraintRight_toRightOf="parent"
            bind:layout_constraintBottom_toBottomOf="parent"
            bind:onClickCommand="@{ViewModel.onStopCommand}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>